Bug 363605 - Crash when closing Cantor
Summary: Crash when closing Cantor
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Filipe Saraiva
URL:
Keywords:
: 373118 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-27 20:50 UTC by Alexander Semke
Modified: 2016-11-30 19:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Semke 2016-05-27 20:50:04 UTC
Cantor having a running session crashes on close with the following call stack:

#6  0x00007f9f886cb558 in vtable for __cxxabiv1::__si_class_type_info () at /usr/lib64/libstdc++.so.6
#7  0x00007f9f8899073f in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#8  0x00007f9f8b23dea5 in KParts::Part::setStatusBarText(QString const&) () at /usr/lib64/libKF5Parts.so.5
#9  0x00007f9f6cb016f5 in  () at /usr/lib64/qt5/plugins/libcantorpart.so
#10 0x00007f9f6cb43333 in  () at /usr/lib64/qt5/plugins/libcantorpart.so
#11 0x00007f9f88990cc6 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#12 0x00007f9f8b6aefde in Cantor::Session::statusChanged(Cantor::Session::Status) () at /usr/lib64/libcantorlibs.so.6
#13 0x00007f9f6d5e5c45 in PythonSession::logout() () at /usr/lib64/libcantor_pythonbackend.so
#14 0x00007f9f6cb126d9 in  () at /usr/lib64/qt5/plugins/libcantorpart.so
#15 0x00007f9f6cb127a9 in  () at /usr/lib64/qt5/plugins/libcantorpart.so
#16 0x00007f9f8898f63c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#17 0x00007f9f89680c0b in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#18 0x00007f9f89680e69 in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#19 0x00007f9f8898f63c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#20 0x00007f9f89680c0b in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#21 0x00007f9f897d7ca9 in QStackedWidget::~QStackedWidget() () at /usr/lib64/libQt5Widgets.so.5
#22 0x00007f9f8898f63c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#23 0x00007f9f89680c0b in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#24 0x00007f9f897e7089 in QTabWidget::~QTabWidget() () at /usr/lib64/libQt5Widgets.so.5
#25 0x00007f9f8898f63c in QObjectPrivate::deleteChildren() () at /usr/lib64/libQt5Core.so.5
#26 0x00007f9f89680c0b in QWidget::~QWidget() () at /usr/lib64/libQt5Widgets.so.5
#27 0x00007f9f8aceb0ef in KMainWindow::~KMainWindow() () at /usr/lib64/libKF5XmlGui.so.5
#28 0x0000000000411ce8 in CantorShell::~CantorShell() ()
#29 0x0000000000411d59 in CantorShell::~CantorShell() ()
#30 0x00007f9f88991b18 in QObject::event(QEvent*) () at /usr/lib64/libQt5Core.so.5
#31 0x00007f9f89684f64 in QWidget::event(QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#32 0x00007f9f8979512b in QMainWindow::event(QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#33 0x00007f9f8aceb6a7 in KMainWindow::event(QEvent*) () at /usr/lib64/libKF5XmlGui.so.5
#34 0x00007f9f8ad25305 in KXmlGuiWindow::event(QEvent*) () at /usr/lib64/libKF5XmlGui.so.5
#35 0x00007f9f89644e7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#36 0x00007f9f89649cc8 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#37 0x00007f9f88960e95 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#38 0x00007f9f88963057 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQt5Core.so.5
#39 0x00007f9f889b88f3 in  () at /usr/lib64/libQt5Core.so.5
#40 0x00007f9f83fdac84 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#41 0x00007f9f83fdaed8 in  () at /usr/lib64/libglib-2.0.so.0
#42 0x00007f9f83fdaf7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#43 0x00007f9f889b7d6c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#44 0x00007f9f8895ed53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#45 0x00007f9f889668f6 in QCoreApplication::exec() () at /usr/lib64/libQt5Core.so.5
#46 0x000000000040feb7 in main ()

Reproducible: Always

Steps to Reproduce:
1. create new session, e.g. python session
2. close Cantor
3. observe the crash
Comment 1 Alexander Semke 2016-10-23 07:03:09 UTC
Git commit dd718f19d26641152cf4db8a837938cf4160d53f by Alexander Semke.
Committed on 22/10/2016 at 18:45.
Pushed by asemke into branch 'master'.

Don't crash when closing Cantor with an open python, scilab or julia session.

M  +0    -2    src/backends/julia/juliasession.cpp
M  +0    -2    src/backends/python/pythonsession.cpp
M  +0    -2    src/backends/scilab/scilabsession.cpp

http://commits.kde.org/cantor/dd718f19d26641152cf4db8a837938cf4160d53f
Comment 2 Alexander Semke 2016-11-30 19:25:39 UTC
*** Bug 373118 has been marked as a duplicate of this bug. ***