Don't crash when closing Cantor with an open python, scilab or julia session.

BUG: 363605