src/backends/python/pythonsession.cpp
@@ -107,8 +107,6 @@ void PythonSession::logout()
     while(i.hasNext()){
         removePlotFigures.remove(QLatin1String(i.next().toLocal8Bit().constData()));
     }
-
-    changeStatus(Cantor::Session::Done);
 }
 
 void PythonSession::interrupt()
